--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,4 +1,4 @@
-nav{
+nav {
   height: 65px;
   width: 100%;
   position: fixed;
@@ -13,8 +13,8 @@ nav{
   font-size: 20px;
   text-transform: uppercase;
   background-color: rgba(0, 0, 0, 0.896);
+  z-index: 5;
 }
-
 
 .menu-div {
   display: flex;
@@ -23,10 +23,7 @@ nav{
   max-width: 650px;
 }
 
-
-
-
-.menu-dd {
+.dd-menu {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -36,6 +33,7 @@ nav{
   transform-origin: right ;
   transition: animation 0s 500ms, opacity 300ms linear;
 }
+
 
 .menu-item {
   color: white;
@@ -71,53 +69,29 @@ nav{
       transform: scaleX(1.005)
   }
   100% {
-      transform: scaleX(1)
+    transform: scaleX(1)
   }
 }
 
-/* @keyframes rotateZ {
-  0% {
-    opacity: 0;
-    transform: translateZ(290px);
-  }
-  
-  80% {
-    transform: translateZ(10px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateZ(0);
-  }
-} */
-
-
-#x {
-  font-weight: 900;
-  cursor: pointer;
-}
-
-.ellipsis {
-  font-size: 25px;
+.dd-btn {
+  display: none;
+  font-size: 30px;
   cursor: pointer;
   opacity: 1;
+  margin-right: 2rem;
   /* transition: opacity 2s linear; */
   animation: rotateZ 400ms ease-in-out ;
+  color: goldenrod;
 }
 
 .menu-item:hover, .lb-logo:hover {
-  /* color: #949209; */
   color: gold;
-  /* background: -webkit-linear-gradient(white, #fdfdfd);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: white; */
 }
 
-/* hover underline fill animation */
-
-.ellipsis:hover {
+.dd-btn:hover {
   animation: jiggle .3s ease-in-out ;
   transform: scale(1.08);
+  color: gold;
 }
 
 @-webkit-keyframes jiggle {
@@ -133,38 +107,38 @@ nav{
 }
 
 .ellipsis:hover #blue-gradient stop {
-  color: rgb(233, 2, 2);
+    color: rgb(233, 2, 2);
 
 }
 
-
-@media screen and (max-width: 800px) {
-  nav { 
-    width: 100%;
-    height: 65px;
-    margin-top: 5px;
-    position: absolute;
+@media screen and (max-width: 808px) {
+  nav {
+    background-color: black;
   }
-  
   .menu-div {
+    /* display: none; */
+    flex-direction: column;
+    width: 100%;
+    margin-top: 20rem;
     align-items: unset;
+    background-color: black;
+    padding: 10px 0;
+    /* border-bottom: 1px solid gray; */
+    box-shadow: 0px 0px 1px 
+  }
+  .menu-item {
+    /* width: 100%; */
+    height: 2rem;
+    border: none;
+  }
+  .dd-btn {
+    display: block;
+  }
+  .menu-item {
+    margin: 1rem 0;
   }
   .lb-logo {
     margin-left: 20px;
-  }
-  #menu-div {
-    margin-right: 20px;
-  }
-  .menu-dd {
-    flex-direction: column-reverse;
-    height: 80px;
-    transition: height 1s ease-in;
-    -webkit-trasition: height .5s ease-in;
-    align-items: flex-end;
-    margin-top: 65px;
-    margin-right: 3px;
-    animation: growDownMobile 400ms ease-in-out ;
-    transform-origin: top;
   }
 
   @keyframes growDownMobile {
@@ -178,11 +152,6 @@ nav{
         transform: scaleY(1)
     }
   }
- 
-  /* nav.active {
-    background-color: rgba(0, 0, 0, 0.95);
-  } */
+
 }
-
-
 
