--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -113,7 +113,7 @@ nav {
 
 @media screen and (max-width: 808px) {
   nav {
-    background-color: black;
+    /* background-color: black; */
   }
   .menu-div {
     display: none;
