--- a/src/Pages/Email.css
+++ b/src/Pages/Email.css
@@ -16,7 +16,7 @@ form {
   align-items: center;
   justify-content: center;
   width: 50%;
-
+  color: gold;
 }
 
 .email-title {
@@ -34,7 +34,7 @@ label {
 .form-control {
   margin-bottom: 50px;
   max-width: 100%;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .input-cont {
@@ -42,14 +42,6 @@ label {
   height: 80px;
   display: flex;
   flex-direction: column;
-}
-
-textarea {
-  max-width: 100%;
-  height: 100px;
-  font-size: 18px;
-  font-family:
-  Arial, Helvetica, sans-serif;
 }
 
 .message-cont {
@@ -66,11 +58,8 @@ textarea {
 
 .btn {
   letter-spacing: 5px;
-  text-align: cn;
   width: 200px;
   height: 30;
-  /* border: 1px solid rgba(255, 255, 255, 0.548); */
-  /* background-color: rgb(196, 139, 5); */
   color: gold;
   border: 1px solid gold;
   font-size: 18px;
@@ -79,8 +68,6 @@ textarea {
   cursor: pointer;
   margin-top: 10px;
   border-radius: 30px;
-  /* border: none; */
-  /* color: black; */
   transition: .2s;
   text-transform: uppercase;
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
@@ -92,12 +79,19 @@ textarea {
 }
 
 input, textarea {
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: black;
-  padding: 5px;
+  padding: 7px;
+  color: white;
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  letter-spacing: 2px;
+  border: 1px solid gray;
+
 }
 
-@media only screen and (max-width: 600px) { 
+
+
+@media only screen and (max-width: 800px) { 
   .form-cont{
     margin-top: 4rem;
     padding-bottom: 0;
