--- a/src/Pages/Portfolio.css
+++ b/src/Pages/Portfolio.css
@@ -46,7 +46,7 @@
   height: 100%;
   grid-template-columns: repeat(3, 20rem);
   grid-template-rows: 1fr 1fr;
-  grid-gap: 16px;
+  grid-gap: 2rem;
   align-items: center;
   justify-content: center;
 }
@@ -114,7 +114,7 @@
 
 @media screen and (max-width: 600px) {
   .projects-grid-small{
-    grid-template-columns: repeat(6, 100px)
+    grid-template-columns: repeat(6, 110px)
   }
 }
 
