--- a/src/Pages/ProjectTileStyles.css
+++ b/src/Pages/ProjectTileStyles.css
@@ -5,14 +5,14 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   align-items: center;
   text-decoration: none;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
-  border-radius: 10px;
+  border-radius: 12px;
   overflow: hidden;
   
 }
@@ -43,7 +43,7 @@
   transition: .5s ease;
   opacity: 1;
   border-radius: 10px;
-  
+  /* center image no matter what */
 }
 
 .project-image-side{
@@ -56,11 +56,11 @@
 
 .project-overlay {
   opacity: 0;
-  transition-duration: 600ms;
+  transition-duration: 450ms;
   position: absolute;
   height: 100%;
   width: 100%;
-  top: 0;
+  
   display: flex;
   flex-direction: column;
   justify-content: center ;
@@ -166,37 +166,71 @@ h4:hover {
 @media screen and (max-width: 980px) {
   .project-tile-cont-smoll {
     border-radius: 50%;
-    /* border: 5px solid goldenrod; */
+    border: 2px solid goldenrod;
     scroll-snap-align: center;
+    box-shadow:  2px 2px 6px rgba(190, 170, 79, 0.337);
+  }
+
+  .projects-grid-small  .project-tile-cont-smoll  #tile-name{
+    font-size: 1rem !important;  
+  }
+
+  .project-tile-cont {
+    box-shadow:  2px 2px 6px rgba(190, 170, 79, 0.337);
+  }
+
+  .project-overlay {
+    opacity: 1;
+    /* background: transparent; */
+    border-radius: 0 0 0 0;
+    height: 100%;
+    justify-content: end;
+    bottom: 0;
+    /* green */
+    /* background: linear-gradient(rgba(111, 78, 164, 0), rgb(5, 66, 68)); */
+    /* purple */
+    /* background: linear-gradient(rgba(111, 78, 164, 0), rgb(25, 5, 68)); */
+    /* black */
+    background: linear-gradient(rgba(111, 78, 164, 0), rgb(3, 0, 15));
+  }
+
+  .project-overlay p {
+    margin-block-start: 0;
+    margin-block-end: 16px;
+    /* display: flex; */
     
   }
 
-  #tile-name{
-    font-size: 1rem !important;
+  .project-overlay-side {
+    opacity: .9;
+    /* background: transparent; */
   }
+
+  .project-tile-cont:hover .project-image{
+    opacity: 1;
+  }
+
  @media screen and (max-width: 808px) {
   .project-tile-cont-smoll {
-    border: 4px solid goldenrod;
+     
   }
-  #tile-name {
+  
+  .projects-grid-small  .project-tile-cont-smoll  #tile-name {
     margin-top: 10px;
     font-size: 12px !important;
     width: 90%;
-    /* height: 110%; */
   }
-  .project-overlay-side {
-    /* top: 0; */
-    margin: 3px 0 0 0;
-  }
- }
 
-  .project-overlay-side{
-    opacity: 0;
-    background-color: transparent;
-  }
+ }
   .project-image-side{
     border-radius: 50%;
     width: 101%;
     height: 101%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .projects-grid-small  .project-tile-cont-smoll  #tile-name {
+    margin-top: 15px;
   }
 }
