--- a/src/Pages/ProjectTileStyles.css
+++ b/src/Pages/ProjectTileStyles.css
@@ -12,9 +12,9 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
-  border-radius: 12px;
+  border-radius: 15px;
   overflow: hidden;
-  
+  border: 1px solid rgb(56, 56, 56);
 }
 
 .project-tile-cont-smoll {
@@ -37,7 +37,7 @@
 }
 
 .project-image{
-  height: 250px;
+  height: 100%;
   width: 100%;
   overflow: hidden;
   transition: .5s ease;
