Aligned Project tile-side overlay

--- a/src/Pages/projectsSection.css
+++ b/src/Pages/projectsSection.css
@@ -30,7 +30,7 @@
 
 .project-inner-cont {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   height: 100%;
   width: 95%;
