--- a/src/Pages/ProjectTileStyles.css
+++ b/src/Pages/ProjectTileStyles.css
@@ -166,9 +166,18 @@ h4:hover {
 @media screen and (max-width: 980px) {
   .project-tile-cont-smoll {
     border-radius: 50%;
-    border: 2px solid goldenrod;
+    border: 3px solid goldenrod;
     scroll-snap-align: center;
     box-shadow:  2px 2px 6px rgba(190, 170, 79, 0.337);
+
+  /* border: 2px solid transparent; 
+  background: linear-gradient(45deg, goldenrod, red) border-box; 
+  -webkit-mask:
+     linear-gradient(#fff 0 0) padding-box, 
+     linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor; 
+          mask-composite: exclude; 
+    z-index: -1; */
   }
 
   .projects-grid-small  .project-tile-cont-smoll  #tile-name{
@@ -203,6 +212,7 @@ h4:hover {
 
   .project-overlay-side {
     opacity: .9;
+    top: -3px;
     /* background: transparent; */
   }
 
