--- a/src/Components/blurb.css
+++ b/src/Components/blurb.css
@@ -10,13 +10,16 @@
 
 .blurb-p {
   width: 80%;
-  margin-top: 50px;
+  /* margin-top: 50px; */
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
 }
 
 .blurb-img {
   height: 250px;
   width: auto;
-  border-radius: 50%;
+  border-radius: 5%;
   margin-left: 50px;
 }
 
@@ -28,7 +31,7 @@
   }
   .blurb-img {
     width: 300px;
-    height: 300px;
+    height: auto;
     margin: 0 0 50px 0;
   }
   .blurb-p {
