Updated mobile project list css

--- a/src/Pages/ProjectTileStyles.css
+++ b/src/Pages/ProjectTileStyles.css
@@ -20,7 +20,7 @@
 .project-tile-cont-smoll {
   background: linear-gradient(rgba(53, 1, 138, 0.568), rgba(0, 47, 53, 0.534));
   /* border: 3px solid rgba(64, 253, 216, 0.657); */
-  height: 90%;
+  height: 100%;
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -103,10 +103,12 @@
   background: linear-gradient(rgba(83, 48, 139, 0.968), rgba(24, 64, 70, 0.934));
   color: white;
   /* background-color: rgba(0, 0, 0, 0.733); */
-  border: 1px solid white;
+  /* border: 1px solid white; */
+  border-radius: 50%;
   font-weight: 900;
   font-size: 15px;
   cursor: pointer;
+
 }
 
 #tile-name {
@@ -166,9 +168,9 @@ h4:hover {
 @media screen and (max-width: 980px) {
   .project-tile-cont-smoll {
     border-radius: 50%;
-    border: 3px solid goldenrod;
+    /* border: 3px solid goldenrod; */
     scroll-snap-align: center;
-    box-shadow:  2px 2px 6px rgba(190, 170, 79, 0.337);
+    /* box-shadow:  2px 2px 6px rgba(190, 170, 79, 0.337); */
 
   /* border: 2px solid transparent; 
   background: linear-gradient(45deg, goldenrod, red) border-box; 
