--- a/src/Pages/ProjectTileStyles.css
+++ b/src/Pages/ProjectTileStyles.css
@@ -93,9 +93,9 @@
   z-index: 10;
   transition-duration: 500ms;
   position: absolute;
-  height: 105%;
-  width: 105%;
-  top: -5px;
+  height: 100%;
+  width: 100%;
+  /* top: -5px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
