--- a/src/Pages/Portfolio.css
+++ b/src/Pages/Portfolio.css
@@ -14,7 +14,7 @@
   width: 97%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   color: white;
   margin-bottom: 2rem;
 
