--- a/src/Pages/ProjectTileStyles.css
+++ b/src/Pages/ProjectTileStyles.css
@@ -171,7 +171,9 @@ h4:hover {
     border: 3px solid goldenrod;
     scroll-snap-align: center;
     overflow: hidden;
-    /* FIXED SAFARI */
+    /* FIXED SAFARI 
+       overlay overflow.
+    */
     -webkit-transform: translate3d(0,0,0);
     box-shadow:  2px 4px 6px rgba(190, 170, 79, 0.337);
   }
