--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -54,11 +54,19 @@ nav {
   color: rgba(255, 217, 0, 0.728);
 }
 
+@media screen and (max-width: 500px) {
+  .lb-logo { font-size: 30px; }
+}
+
 .hidden {
   visibility: hidden;
   display: none;
   opacity: 0;
   transition: display 0s 500ms, opacity 500ms linear;
+}
+
+.burger {
+  display: none;
 }
 
 @keyframes growDown {
@@ -112,9 +120,6 @@ nav {
 }
 
 @media screen and (max-width: 808px) {
-  nav {
-    /* background-color: black; */
-  }
   .menu-div {
     display: none;
     z-index: 100;
@@ -124,7 +129,6 @@ nav {
     align-items: unset;
     background-color: black;
     padding: 10px 0;
-    /* border-bottom: 1px solid gray; */
     box-shadow: 0px 0px 1px 
   }
 
@@ -133,7 +137,6 @@ nav {
   }
 
   .menu-item {
-    /* width: 100%; */
     height: 2rem;
     border: none;
     margin: 1rem 0;
@@ -145,6 +148,11 @@ nav {
 
   .lb-logo {
     margin-left: 20px;
+  }
+
+  .burger {
+    display: block;
+    margin-right: 10px;
   }
 
   @keyframes growDownMobile {
