--- a/src/Pages/projectsSection.css
+++ b/src/Pages/projectsSection.css
@@ -160,7 +160,7 @@ a {
 @media screen and (max-width: 800px) {
   .projects-cont{
     width: 90%;
-    margin-bottom: 30px;
+    margin: 35px 30px;
   }
 
   .tools {
@@ -191,7 +191,7 @@ a {
 @media screen and (max-width: 600px) {
   .project-title {
     text-align: center;
-    margin-bottom: 0 0 2rem 0;
+    margin: 0 0 2rem 0;
   }
 
   .project-inner-cont {
