--- a/src/Components/Welcome.css
+++ b/src/Components/Welcome.css
@@ -35,6 +35,12 @@ h1 {
   z-index: 3;
 }
 
+#romanji {
+  font-size: 60px;
+  color: #b1b162cc;
+  font-weight: 900;
+}
+
 @keyframes animate {
   0%, 10%{
     background-position: -1000px;
